# ardupilot_gazebo

./: .gitignore  CMakeLists.txt
include/: ParachutePlugin.hh
models/zephyr_with_ardupilot/: model.sdf
src/: ArduPilotPlugin.cc  ParachutePlugin.cc
worlds/: zephyr_arduplane_runway.world
